--- a/src/login/index.html
+++ b/src/login/index.html
@@ -23,9 +23,9 @@
                 SyntaxForge
             </h1>
 
-            <input class="text-xl" placeholder="username" id="username">
-            <input class="text-xl" placeholder="email" id="email">
-            <input class="text-xl" placeholder="password" id="password">
+            <input class="text-xl" placeholder="username" id="username" type="text">
+            <input class="text-xl" placeholder="email" id="email" type="email">
+            <input class="text-xl" placeholder="password" id="password" type="password">
 
             <div class="row mt-4 place-content-center gap-5">
                 <button id="signup" class="text-xl w-full">Sign Up</button>
