--- a/src/lesson/index.html
+++ b/src/lesson/index.html
@@ -39,8 +39,8 @@
                     <option>20px</option>
 
                 </select>
-                <button class="ml-auto" id="run">Run</button>
-                <button class="hidden" id="next">Next</button>
+                <button class="ml-auto" id="run">Run Code</button>
+                <button class="hidden" id="next">Next Lesson</button>
             </div>
 
         </div>
