bug fixes, tab indent works now, remove usernames, etc

--- a/src/lesson/index.html
+++ b/src/lesson/index.html
@@ -16,7 +16,7 @@
     <main class="place-content-start place-items-start p-0 row gap-0 flex w-full h-screen overflow-hidden">
         <div class="col w-1/2 p-8 min-w-1/5 h-full place-content-start place-items-start overflow-auto" id="content">
 
-            <h2 class="text-3xl mb-6" id="title">test</h2>
+            <h2 class="text-3xl mb-6"><a id="parent"></a> / <span id="title"></span></h2>
             <div class="col place-items-start place-content-start" id="rendered"></div>
             <textarea class="hidden w-full h-full" id="raw"></textarea>
 
