--- a/src/login/index.html
+++ b/src/login/index.html
@@ -23,7 +23,7 @@
                 SyntaxForge
             </h1>
 
-            <input class="text-xl" placeholder="username" id="username" type="text">
+            <!-- <input class="text-xl" placeholder="username" id="username" type="text"> -->
             <input class="text-xl" placeholder="email" id="email" type="email">
             <input class="text-xl" placeholder="password" id="password" type="password">
 
