add some seo stuff

--- a/src/courses/index.html
+++ b/src/courses/index.html
@@ -4,7 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SyntaxForge - Courses</title>
+    <title>SyntaxForge | Browse Coding Courses</title>
+    <meta name="description"
+        content="Explore a variety of coding courses on SyntaxForge, designed to help you learn programming step-by-step.">
+    <meta property="og:title" content="SyntaxForge | Browse Coding Courses" />
+    <meta property="og:description"
+        content="Explore a variety of coding courses on SyntaxForge, designed to help you learn programming step-by-step." />
+    <meta property="og:image" content="https://syntaxforge.dev/logo.png" />
+    <meta property="og:url" content="https://syntaxforge.dev/courses" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="SyntaxForge | Browse Coding Courses" />
+    <meta name="twitter:description"
+        content="Explore a variety of coding courses on SyntaxForge, designed to help you learn programming step-by-step." />
+    <meta name="twitter:image" content="https://syntaxforge.dev/logo.png" />
+    <link rel="canonical" href="https://syntaxforge.dev/courses" />
 
 
 </head>
