--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SyntaxForge</title>
+    <title>SyntaxForge | Interactive Coding Lessons & Challenges</title>
+    <meta name="description"
+        content="Learn coding through interactive lessons and challenges. SyntaxForge helps beginners and advanced coders master programming skills at their own pace.">
+    <meta property="og:title" content="SyntaxForge | Interactive Coding Lessons & Challenges" />
+    <meta property="og:description"
+        content="Learn coding through interactive lessons and challenges. SyntaxForge helps coders at any level build real skills." />
+    <meta property="og:image" content="https://syntaxforge.dev/logo.png" />
+    <meta property="og:url" content="https://syntaxforge.dev" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="SyntaxForge | Interactive Coding Lessons & Challenges" />
+    <meta name="twitter:description"
+        content="Learn coding through interactive lessons and challenges. SyntaxForge helps coders at any level build real skills." />
+    <meta name="twitter:image" content="https://syntaxforge.dev/logo.png" />
+    <link rel="canonical" href="https://syntaxforge.dev/" />
+
+
 </head>
 
 <body>
