--- a/src/login/index.html
+++ b/src/login/index.html
@@ -4,7 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SyntaxForge - Login</title>
+    <title>SyntaxForge | Login to Your Account</title>
+    <meta name="description"
+        content="Access your SyntaxForge account to continue your coding journey with personalized lessons and challenges.">
+    <meta property="og:title" content="SyntaxForge | Login to Your Account" />
+    <meta property="og:description"
+        content="Access your SyntaxForge account to continue your coding journey with personalized lessons and challenges." />
+    <meta property="og:image" content="https://syntaxforge.dev/logo.png" />
+    <meta property="og:url" content="https://syntaxforge.dev/login" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="SyntaxForge | Login to Your Account" />
+    <meta name="twitter:description"
+        content="Access your SyntaxForge account to continue your coding journey with personalized lessons and challenges." />
+    <meta name="twitter:image" content="https://syntaxforge.dev/logo.png" />
+    <link rel="canonical" href="https://syntaxforge.dev/login" />
+
 
 </head>
 
