--- a/src/course/index.html
+++ b/src/course/index.html
@@ -4,9 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SyntaxForge - Course</title>
-
-
+    <title>SyntaxForge | Course</title>
 </head>
 
 <body>
