--- a/src/course/index.html
+++ b/src/course/index.html
@@ -22,7 +22,7 @@
                 <progress id="pbar" value="0" max="100"></progress>
             </div>
         </div>
-        <div class="col w-1/3" id="lessons">
+        <div class="col w-1/3 overflow-y-auto place-content-start p-4 h-full" id="lessons">
 
         </div>
     </main>
