add better mobile topbar and login button

--- a/src/index.html
+++ b/src/index.html
@@ -24,13 +24,17 @@
 </head>
 
 <body>
-    <header class="relative">
-        <a class="gradient-text" href="/">SyntaxForge</a>
+    <header>
+        <a class="gradient-text" id="head" href="/">SyntaxForge</a>
         <a href="/courses">Courses</a>
+        <div id="back">
+            <a href="/login" id="login">Login</a>
+
+        </div>
     </header>
 
     <main class="pt-0">
-        <section class="min-h-screen flex items-center justify-center">
+        <section class="min-h-full flex items-center justify-center">
             <div class="col text-center">
                 <h1 class="text-5xl font-extrabold text-forge-text">
                     Welcome to <span class="gradient-text">SyntaxForge</span>
