--- a/src/index.html
+++ b/src/index.html
@@ -36,13 +36,13 @@
     <main class="pt-0">
         <section class="min-h-full flex items-center justify-center">
             <div class="col text-center">
-                <h1 class="text-5xl font-extrabold text-forge-text">
+                <h1 class="text-4xl md:text-5xl font-extrabold text-forge-text">
                     Welcome to <span class="gradient-text">SyntaxForge</span>
                 </h1>
                 <p class="text-lg text-forge-subtext">
                     Learn to code with interactive lessons, instant feedback, and a built-in editor.
                 </p>
-                <div class="row text-xl mt-4 flex justify-center gap-4">
+                <div class="row text-lg md:text-xl mt-4 flex justify-center gap-4">
                     <a href="/courses">
                         <button class="bg-forge-accent px-6 py-2 hover:scale-105 transition-transform text-white">Start
                             Learning</button>
@@ -77,8 +77,9 @@
 
         <section class="col mt-16">
             <h2 class="text-3xl">Editor Preview</h2>
-            <div class="row h-80 w-3/4 mt-4 gap-0">
-                <div class="col w-3/4 h-full gap-0">
+            <div
+                class="row h-96 w-full md:w-3/4 mt-4 gap-0 flex-wrap md:flex-nowrap place-content-start place-items-start">
+                <div class="col md:w-3/4 w-full h-full overflow-hidden gap-0">
                     <div id="editor" class="w-full h-full"></div>
                     <div
                         class="row w-full bg-forge-surface p-2 place-content-end border-t-2 border-t-forge-accent text-sm">
@@ -86,7 +87,7 @@
                     </div>
                 </div>
                 <div id="output"
-                    class="w-1/4 h-full col bg-black place-content-start place-items-start font-mono p-4 gap-0.5">
+                    class="md:w-1/4 w-full md:h-full h-1/2 col bg-black place-content-start place-items-start font-mono p-4 gap-0.5">
                     <span>Code Sample Terminal v1.0.0</span>
                 </div>
             </div>
