--- a/src/lesson/index.html
+++ b/src/lesson/index.html
@@ -8,29 +8,38 @@
 </head>
 
 <body>
-    <header class="relative">
-        <a class="gradient-text" href="/">SyntaxForge</a>
+    <header>
+        <a class="gradient-text" id="head" href="/">SyntaxForge</a>
         <a href="/courses">Courses</a>
+        <a href="/editor">Playground</a>
+
+        <div id="back">
+            <a href="/login" id="login">Login</a>
+
+        </div>
     </header>
 
-    <main class="place-content-start place-items-start p-0 row gap-0 flex w-full h-screen overflow-hidden">
-        <div class="col w-1/2 p-8 min-w-1/5 h-full place-content-start place-items-start overflow-auto" id="content">
+    <main class="place-content-start place-items-start p-0 col md:row gap-0 flex w-full h-screen">
+        <div id="content" class="flex flex-col w-full p-4 md:p-8 h-full min-w-1/5 overflow-y-auto">
+            <h2 class="text-2xl md:text-3xl mb-6"><a id="parent"></a> / <span id="title"></span></h2>
 
-            <h2 class="text-3xl mb-6"><a id="parent"></a> / <span id="title"></span></h2>
-            <div class="col place-items-start place-content-start" id="rendered"></div>
-            <textarea class="hidden w-full h-full" id="raw"></textarea>
+            <div class="flex flex-col w-full gap-6" id="rendered"></div>
+            <textarea class="hidden w-full" id="raw"></textarea>
+
 
             <h2 class="mt-6">Tasks</h2>
-
-            <div id="tasks" class="col w-full"></div>
+            <div id="tasks" class="flex mt-3 flex-col w-full gap-3"></div>
         </div>
-        <div id="resizer" class="w-0.5 h-full cursor-col-resize bg-forge-accent"></div>
 
-        <div class="col w-1/2 h-full gap-0 min-w-1/5" id="editor">
+        <div id="resizer" class="md:min-w-1 md:w-1 min-h-1 h-1 w-full md:h-full cursor-col-resize bg-forge-accent">
+        </div>
+
+        <div class="col w-full h-full gap-0 md:min-w-1/5 flex-col-reverse md:flex-col" id="editor">
 
             <div id="edit" class="h-full w-full overflow-auto"></div>
 
-            <div id="controls" class="p-4 row text-md w-full h-auto border-t-2 border-forge-accent bg-forge-surface">
+            <div id="controls"
+                class="p-4 row text-xs md:text-md w-full h-auto border-t-2 border-forge-accent bg-forge-surface">
                 <select class="muted" id="fontsize">
                     <option>12px</option>
                     <option>14px</option>
