minor bug fixes

--- a/src/editor/index.html
+++ b/src/editor/index.html
@@ -44,7 +44,7 @@
                     <button id="run">Run Code</button>
                 </div>
             </div>
-            <div id="output" class="terminal h-2/5 md:w-2/5">
+            <div id="output" class="terminal h-full md:w-2/5">
                 <span>Code Sample Terminal v1.0.0</span>
             </div>
         </div>
