Abstract Editor into it's own class Fixes #1

--- a/src/editor/index.html
+++ b/src/editor/index.html
@@ -37,8 +37,8 @@
 
     <main class="p-0">
 
-        <div class="row h-full w-full gap-0 flex-wrap md:flex-nowrap place-content-start place-items-start">
-            <div class="col md:w-3/5 w-full h-3/5 md:h-full overflow-hidden gap-0 place-content-start">
+        <div id="editor" class="row h-full w-full gap-0 flex-wrap md:flex-nowrap place-content-start place-items-start">
+            <!-- <div class="col md:w-3/5 w-full h-3/5 md:h-full overflow-hidden gap-0 place-content-start">
                 <div id="editor" class="w-full h-full overflow-auto"></div>
                 <div class="row w-full bg-forge-surface p-2 place-content-end border-t-2 border-t-forge-accent text-sm">
                     <button id="run">Run Code</button>
@@ -46,7 +46,7 @@
             </div>
             <div id="output" class="terminal h-full md:w-2/5">
                 <span>Code Sample Terminal v1.0.0</span>
-            </div>
+            </div> -->
         </div>
 
 
