--- a/src/index.html
+++ b/src/index.html
@@ -80,17 +80,8 @@
         <section class="col mt-16">
             <h2 class="text-3xl">Editor Preview</h2>
             <div
-                class="row h-96 w-full md:w-3/4 mt-4 gap-0 flex-wrap md:flex-nowrap place-content-start place-items-start">
-                <div class="col md:w-3/4 w-full h-full overflow-hidden gap-0 place-content-start">
-                    <div id="editor" class="w-full h-full"></div>
-                    <div
-                        class="row w-full bg-forge-surface p-2 place-content-end border-t-2 border-t-forge-accent text-sm">
-                        <button id="run">Run Code</button>
-                    </div>
-                </div>
-                <div id="output" class="terminal">
-                    <span>Code Sample Terminal v1.0.0</span>
-                </div>
+                id="editor" class="row h-96 w-full md:w-3/4 mt-4 gap-0 flex-wrap md:flex-nowrap place-content-start place-items-start">
+                
             </div>
         </section>
 
