Downsize cta buttons to prevent scrolling Fixes #3

--- a/src/index.html
+++ b/src/index.html
@@ -46,13 +46,13 @@
                 </p>
                 <div class="row text-lg md:text-xl mt-4 flex justify-center gap-4">
                     <a href="/courses">
-                        <button class="bg-forge-accent px-6 py-2 hover:scale-105 transition-transform text-white">Start
+                        <button class="bg-forge-accent md:px-6 md:py-2 py-1 px-3 hover:scale-105 transition-transform text-white">Start
                             Learning</button>
 
                     </a>
                     <a href="/editor">
                         <button
-                            class="muted px-6 py-2 bg-forge-muted hover:scale-105 transition-transform text-white">Launch
+                            class="muted md:px-6 md:py-2 py-1 px-3 bg-forge-muted hover:scale-105 transition-transform text-white">Launch
                             Playground</button>
                     </a>
                 </div>
